[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/colorful-palette-swap/code/recolor.gd" type="Script" id=1]
[ext_resource path="res://addons/colorful-palette-swap/panel/theme.tres" type="Theme" id=2]
[ext_resource path="res://addons/colorful-palette-swap/panel/processingpopup.gd" type="Script" id=3]
[ext_resource path="res://addons/colorful-palette-swap/panel/EditorPathInput.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/colorful-palette-swap/code/invalid_path_popup.gd" type="Script" id=6]

[node name="SwappablePalettePopup" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -224.0
margin_bottom = -331.0
rect_min_size = Vector2( 700, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
resizable = true
script = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_vertical_enabled = false

[node name="Swap" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 780.0
margin_bottom = 273.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="ScrollContainer/Swap"]
margin_right = 780.0
margin_bottom = 14.0
text = "Recolor Image"

[node name="RecolorImage" type="HBoxContainer" parent="ScrollContainer/Swap"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 780.0
margin_bottom = 255.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Paths" type="VBoxContainer" parent="ScrollContainer/Swap/RecolorImage"]
margin_right = 710.0
margin_bottom = 237.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Input" parent="ScrollContainer/Swap/RecolorImage/Paths" instance=ExtResource( 4 )]
margin_right = 710.0
label = "Target"
path_tooltip = "Image to recolor. Will preserve alpha."

[node name="FromColor" type="HBoxContainer" parent="ScrollContainer/Swap/RecolorImage/Paths"]
margin_top = 28.0
margin_right = 710.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="ScrollContainer/Swap/RecolorImage/Paths/FromColor"]
margin_top = 3.0
margin_right = 90.0
margin_bottom = 17.0
rect_min_size = Vector2( 90, 0 )
text = "From"

[node name="Value" type="ColorPickerButton" parent="ScrollContainer/Swap/RecolorImage/Paths/FromColor"]
margin_left = 100.0
margin_right = 710.0
margin_bottom = 20.0
size_flags_horizontal = 3
color = Color( 0.341176, 0.247059, 0.545098, 1 )
edit_alpha = false

[node name="ToColor" type="HBoxContainer" parent="ScrollContainer/Swap/RecolorImage/Paths"]
margin_top = 52.0
margin_right = 710.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="ScrollContainer/Swap/RecolorImage/Paths/ToColor"]
margin_top = 3.0
margin_right = 90.0
margin_bottom = 17.0
rect_min_size = Vector2( 90, 0 )
text = "To"

[node name="Value" type="ColorPickerButton" parent="ScrollContainer/Swap/RecolorImage/Paths/ToColor"]
margin_left = 100.0
margin_right = 710.0
margin_bottom = 20.0
size_flags_horizontal = 3
color = Color( 0.407843, 0.168627, 0.509804, 1 )
edit_alpha = false

[node name="Padding" type="Control" parent="ScrollContainer/Swap/RecolorImage/Paths"]
margin_top = 76.0
margin_right = 710.0
margin_bottom = 81.0
rect_min_size = Vector2( 0, 5 )

[node name="ImagePreview" type="TextureRect" parent="ScrollContainer/Swap/RecolorImage/Paths"]
margin_top = 85.0
margin_right = 710.0
margin_bottom = 185.0
rect_min_size = Vector2( 100, 100 )
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="Palette" parent="ScrollContainer/Swap/RecolorImage/Paths" instance=ExtResource( 4 )]
margin_top = 189.0
margin_right = 710.0
margin_bottom = 213.0
label = "Palette"
path_tooltip = "Optional. Path to a palette for easier color picking."

[node name="PalettePreview" type="TextureRect" parent="ScrollContainer/Swap/RecolorImage/Paths"]
margin_top = 217.0
margin_right = 710.0
margin_bottom = 237.0
rect_min_size = Vector2( 100, 20 )
expand = true
stretch_mode = 6

[node name="Button" type="Button" parent="ScrollContainer/Swap/RecolorImage"]
margin_left = 720.0
margin_top = 83.0
margin_right = 780.0
margin_bottom = 153.0
rect_min_size = Vector2( 0, 70 )
size_flags_vertical = 4
text = "Recolor"

[node name="Output" type="Label" parent="ScrollContainer/Swap"]
margin_top = 259.0
margin_right = 780.0
margin_bottom = 273.0
align = 2

[node name="InvalidPathPopup" type="AcceptDialog" parent="."]
unique_name_in_owner = true
margin_right = 123.0
margin_bottom = 58.0
window_title = "Invalid path"
resizable = true
script = ExtResource( 6 )
